add api services